--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "core-js": "^3.22.8",
     "hammerjs": "^2.0.8",
     "ng-apexcharts": "^1.7.1",
-    "sass": "^1.52.3",
+    "ng-mat-carousel": "^0.11.1",
     "rxjs": "^7.5.5",
     "rxjs-compat": "^6.6.7",
+    "sass": "^1.52.3",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.5"
   },
